[project]
name = "maverick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain[google-genai]>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.7",
    "psycopg2-binary>=2.9.10",
    "python-socketio>=5.13.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "mcp>=1.13.1",
    "langchain-google-vertexai>=2.1.2",
    "greenlet>=3.2.4",
    "generated",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
    "types-redis>=4.6.0.20241004",
    "cachetools>=5.5.2",
    "anthropic[vertex]>=0.69.0",
    "alembic>=1.16.5",
    "locust>=2.41.6",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-asgi>=0.58b0",
    "sqlglot>=27.28.1",
    "avro>=1.12.1",
    "confluent-kafka>=2.12.1",
    "authlib>=1.3.0",
    "fastavro>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-python-dateutil",
    "types-requests",
    "black",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "otlp_json",
    "deepeval",
    "deepteam",
    "opik",
    "types-cachetools>=6.2.0.20250827",
    "py-avro-schema>=3.8.2",
]

[tool.uv.sources]
generated = { path = "./generated" }

[tool.mypy]
python_version = "3.12"
mypy_path = "."
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

files = ["."]

[tool.black]
line-length = 120

[tool.pylint.messages_control]
disable = "all"
enable = [
    "unused-import",
    "unused-variable",
    "unused-argument",
    "no-member",
    "protected-access",
    "arguments-differ",
    # TODO: the checks below should probably be enabled!
    #"import-error",
]

[tool.pytest.ini_options]
pythonpath = "."
# run without integration tests by default
addopts = "-m 'not aibomintegration and not dbintegration and not e2e and not requires_cerberus and not redisintegration and not eventbusintegration'"
markers = [
    "aibomintegration: integration tests that require a working aibom service.",
    "dbintegration: integration tests that require a database.",
    "redisintegration: integration tests that require a redis instance.",
    "eventbusintegration: integration tests that require a kafka instance and schema registry.",
    "e2e: e2e tests",
    "requires_cerberus: e2e tests that require cerberus",
]

filterwarnings = [
    "ignore::DeprecationWarning:engineio.*", # Ignore deprecation warning that we can't control from engineio lib
]

[dependency-groups]
dev = ["openapi-python-client>=0.26.1", "pylint>=3.3.8"]
